Fixed `#end__the` font weight jump

--- a/css/end.css
+++ b/css/end.css
@@ -22,6 +22,7 @@
 	rotate: -24deg;
 	display: inline-block;
 	font-size: 6rem;
+	font-weight: 300;
 	color: #fff;
 }
 
